[package]
name = "guoshunfa"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "guoshunfa_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8.5"
futures = "0.3"
tokio = { version = "1.0", features = ["full"] }
tauri-plugin-dialog = "2"
num_cpus = "1.0"
threadpool = "1.8"
rayon = "1.8"
bytes = "1.5"
dashmap = "5.5"
indicatif = "0.17"
anyhow = "1.0"
